[[bin]]
name = "tidechain"
path = "src/main.rs"

[package]
version = "0.1.1"
name = "tidechain"
description = "Implementation of TIDE Chain node in Rust based on the Substrate framework."
license = "GPL-3.0-or-later"
authors = ["Semantic Network Team"]
edition = "2021"

readme = "README.md"

[dependencies]
tidechain-cli = { path = "cli", features = [ "tidechain-native", "hertel-native" ]  }
color-eyre = { version = "0.5.11", default-features = false }

[workspace]
members = [
    'cli',
    'node/client',
    'node/rpc',
    'node/service',
    'runtime/tidechain',
    'runtime/hertel',
    'utils/generate-bags',
    'frame/*',
]

exclude = ["runtime/common"]

[badges]
maintenance = { status = "actively-developed" }

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
# Tidechain runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"
lto = true

[profile.testnet]
inherits = "release"
debug = true # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true

[features]
runtime-benchmarks= [ "tidechain-cli/runtime-benchmarks" ]