[[bin]]
name = "tidechain"
path = "src/main.rs"

[package]
version = "0.4.4"
name = "tidechain"
description = "Implementation of Tidechain node in Rust based on the Substrate framework."
license = "GPL-3.0-or-later"
authors = ["Semantic Network Team <publishers@tidelabs.org>"]
edition = "2021"

readme = "README.md"

[dependencies]
tidechain-cli = { path = "cli", features = [ "tidechain-native", "lagoon-native" ]  }
color-eyre = { version = "0.6.1", default-features = false }

[workspace]
members = [
    'cli',
    'node/client',
    'node/rpc',
    'node/service',
    'runtime/tidechain',
    'runtime/lagoon',
    #'utils/generate-bags',
    'frame/*',
]

exclude = ["runtime/common"]

[badges]
maintenance = { status = "actively-developed" }

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
# Tidechain runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"
lto = true

[profile.testnet]
inherits = "release"
debug = true # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true

[features]
runtime-benchmarks= [ "tidechain-cli/runtime-benchmarks" ]
try-runtime = [ "tidechain-cli/try-runtime" ]

# Configuration for building a .deb package - for use with `cargo-deb`
[package.metadata.deb]
name = "tidechain"
extended-description = "Implementation of a https://tidefi.io node in Rust based on the Substrate framework."
section = "misc"
maintainer = "publishers@tidelabs.org"
license-file = ["LICENSE", "0"]
# https://www.debian.org/doc/debian-policy/ch-maintainerscripts.html
maintainer-scripts = "scripts/packaging/deb-maintainer-scripts"
assets = [
	["target/release/tidechain", "/usr/bin/", "755"],
	["scripts/packaging/tidechain.service", "/lib/systemd/system/", "644"]
]
conf-files = [
	"/etc/default/tidechain"
]

# Configuration for building an .rpm package - for use with `cargo-rpm`
[package.metadata.rpm]
package = "tidechain"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
tidechain = { path = "/usr/bin/tidechain" }

[package.metadata.rpm.files]
"../scripts/packaging/tidechain.service" = { path = "/usr/lib/systemd/system/tidechain.service", mode = "644" }

[package.metadata.spellcheck]
config = "./scripts/gitlab/spellcheck.toml"
