[package]
name = "tidechain-cli"
version = "0.1.6"
authors = ["Semantic Network Team"]
edition = "2021"
license = "GNU GPL v3"
homepage = ""
repository = ""

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on Linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.13"
thiserror = "1.0.30"
clap = { version = "3.1", features = ["derive"], optional = true }
futures = "0.3.19"
sp-core = { git = "https://github.com/tide-labs/substrate", branch = "tidechain", optional = true }
sc-cli = { git = "https://github.com/tide-labs/substrate", branch = "tidechain", features = ["wasmtime"], optional = true }
sc-service = { git = "https://github.com/tide-labs/substrate", branch = "tidechain", features = ["wasmtime"], optional = true }
tidechain-service = { path = "../node/service", optional = true, default-features = false }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
frame-benchmarking-cli = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/tide-labs/substrate", branch = "tidechain" }

[features]
default = [ "tidechain-native", "full-node", "cli" ]
try-runtime = []
runtime-benchmarks = [
	"tidechain-service/runtime-benchmarks",
]
cli = [
	"clap",
	"sp-core",
	"sc-cli",
	"sc-service",
]

full-node = [ "tidechain-service/full-node" ]
tidechain-native = [ "tidechain-service/tidechain-native" ]
lagoon-native = [ "tidechain-service/lagoon-native" ]