[package]
name = "tidechain-cli"
version = "0.7.0"
authors = ["Semantic Network Team <publishers@tidelabs.org>"]
edition = "2021"
license = "GNU GPL v3"
homepage = ""
repository = ""

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on Linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.17"
thiserror = "1.0.31"
clap = { version = "4.0.9", features = ["derive"], optional = true }
futures = "0.3.28"
sp-io = { git = "https://github.com/tidelabs/substrate", branch = "tidechain", optional = true }
sp-core = { git = "https://github.com/tidelabs/substrate", branch = "tidechain", optional = true }
sc-cli = { git = "https://github.com/tidelabs/substrate", branch = "tidechain", optional = true }
sc-service = { git = "https://github.com/tidelabs/substrate", branch = "tidechain", optional = true }
sc-sysinfo = { git = "https://github.com/tidelabs/substrate", branch = "tidechain", optional = true }
sc-executor = { git = "https://github.com/tidelabs/substrate", branch = "tidechain", optional = true }
tidechain-service = { path = "../node/service", optional = true, default-features = false }
tidechain-client = { path = "../node/client", optional = true, default-features = false }

frame-benchmarking = { git = "https://github.com/tidelabs/substrate", branch = "tidechain", optional = true }
frame-benchmarking-cli = { git = "https://github.com/tidelabs/substrate", branch = "tidechain", optional = true }
try-runtime-cli = { git = "https://github.com/tidelabs/substrate", branch = "tidechain", optional = true }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }

[features]
default = [ "tidechain-native", "full-node", "cli" ]
try-runtime = [
	"try-runtime-cli/try-runtime",
	"tidechain-service/try-runtime",
	"sc-executor",
	"sp-io"
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-benchmarking-cli",	
	"tidechain-service/runtime-benchmarks",
]
cli = [
	"clap",
	"sp-core",
	"sc-cli",
	"sc-service",
	"sc-sysinfo",
	"tidechain-client",
	"try-runtime-cli"
]

full-node = [ "tidechain-service/full-node" ]
tidechain-native = [ "tidechain-service/tidechain-native" ]
lagoon-native = [ "tidechain-service/lagoon-native" ]