[package]
name = "tidefi-node"
version = "1.0.0"
authors = [""]
edition = "2021"
license = "GNU GPL v3"
homepage = ""
repository = ""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0" }
structopt = { version = "0.3.8", optional = true }

[dependencies]
# third-party dependencies
scale-info = { version = "1.0" }
jsonrpc-core = "18.0.0"
codec = { package = "parity-scale-codec", version = "2" }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3.9", features = ["compat"] }
hex-literal = "0.3.1"
rand = "0.7.2"
structopt = { version = "0.3.8" }
parking_lot = "0.11.1"
itertools = "0.10.1"
# local dependencies
node-tidefi-runtime = { path = "../runtime" }

# Substrate dependencies
frame-benchmarking = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
frame-support = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
frame-benchmarking-cli = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-im-online = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-staking = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-transaction-payment-rpc = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-contracts = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-contracts-rpc = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sc-basic-authorship = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sc-client-api = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sc-chain-spec = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sc-consensus = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sc-sync-state-rpc = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sc-consensus-slots = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sc-consensus-uncles = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sc-authority-discovery = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sc-consensus-babe = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sc-consensus-babe-rpc = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sc-consensus-epochs = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
grandpa = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1", package="sc-finality-grandpa"}
sc-finality-grandpa-rpc = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sc-keystore = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sc-network = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sc-rpc = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sc-rpc-api = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sc-transaction-pool = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-api = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-authorship = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-block-builder = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-blockchain = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-consensus = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-consensus-babe = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-core = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-keystore = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
grandpa-primitives = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1", package="sp-finality-grandpa"}
sp-inherents = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-timestamp = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-runtime = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sc-telemetry = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-transaction-pool = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
substrate-frame-rpc-system = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sc-service-test = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-keyring = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
frame-system = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-transaction-payment = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sc-transaction-pool-api = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-authority-discovery = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }

#Primitives
tidefi-primitives = { git = "https://tributary.semantic-network.tech/semnet/tidefi/back/tidefi-primitives", branch = "feat/tidefi-1.0.1", default-features = false }
sc-executor = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }

# RPC
pallet-wrapr-rpc = { path = '../pallets/wrapr-rpc' }

sc-cli = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1", features = ["wasmtime"] }
node-executor = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1", features = ["wasmtime"] }
sc-service = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1", features = ["wasmtime"]}
sp-trie = { git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1", default-features= false, features = [
	"memory-tracker",
] }


[dev-dependencies]
futures = "0.3.9"
tempfile = "3.1.0"
assert_cmd = "1.0"
nix = "0.19"
regex = "1"
platforms = "1.1"
async-std = { version = "1.6.5", features = ["attributes"] }
soketto = "0.4.2"
sc-keystore =  {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sc-consensus = {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sc-consensus-babe =  {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sc-consensus-epochs =  {  git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }


[features]
default = []
runtime-benchmarks = [
	"node-tidefi-runtime/runtime-benchmarks",
]
